<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <!-- AppBar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMain"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="#2196F3"
        android:title="@string/app_name"
        android:titleTextColor="@android:color/white"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Card Form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note_title"
                android:background="@android:drawable/edit_text"
                android:padding="12dp" />

            <Button
                android:id="@+id/btnAddPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_photo"
                android:textAllCaps="false"
                android:backgroundTint="#2196F3"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
