<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9"
    tools:context=".PhotoPickerActivity">

    <!-- Tombol Back -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        app:tint="@android:color/white"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_button_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_picker_info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2E7D32"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/dummyPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:background="@drawable/rounded_bg"
        android:contentDescription="@string/photo_picker_info"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_photo"
        android:backgroundTint="#4CAF50"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/dummyPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
